--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
 {
-  "name": "nodejs",
+  "name": "minecraft-bot",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "description": "Minecraft bot with reinforcement learning",
+  "main": "bot.js",
   "dependencies": {
-    "@types/node": "^18.0.6"
-  }
+    "mineflayer": "^4.0.0",
+    "axios": "^1.0.0"
+  },
+  "scripts": {
+    "start": "node bot.js"
+  },
+  "author": "Seu Nome",
+  "license": "MIT"
 }
